# Creda

./: .gitignore  README.md  VOICE_INTEGRATION_GUIDE.md
Creda_App/: README.md  (+1 more)
Creda_Fastapi/: app copy.py  app.py  diagnose_stack.py  fastapi1_multilingual.py  fastapi2_finance.py  models.py  pipecat_bot.py  pyproject copy.toml  pyproject.toml  readme.md  requirements.txt  run_stack.py  start-dev.ps1
Creda_Fastapi/agents/: __init__.py  fire_planner_agent.py  graph.py  intent_router.py  money_health_agent.py  portfolio_xray_agent.py  rag_agent.py  state.py  stress_test_agent.py  tax_wizard_agent.py
Creda_Fastapi/error_log1/: __init__.py  conftest.py  test_finance_endpoints.py  test_gateway_passthrough.py  test_money_health_422.py  test_pipecat_501.py  test_pipecat_import.py
Creda_Fastapi/error_log2/: test_couples_planner_422.py  test_fire_planner_422.py  test_gateway_binary.py  test_missing_endpoints.py  test_money_health_none.py  test_portfolio_xray_422.py
Creda_Fastapi/tests/: AUDIO_FILES_NEEDED.md  README_TESTS.md  comprehensive_multilingual_test.py  quick_test_asr.py  quick_test_groq.py  quick_test_parler_tts.py  quick_test_translation.py  test_apis.py  test_comprehensive_multilingual.py  test_error_handling.py  test_finance_api.py  test_gateway.py  test_integration.py  test_mic.py  test_multilingual.py  test_session_management.py
Creda_Fastapi/tests/audio/: README.md  __init__.py  conftest.py  test_process_voice.py  test_tts_only.py  test_voice_command.py
Creda_Fastapi/tests/sample_data/: test_data.json
python/: .env.example  .gitattributes  Makefile  README.md  doc.md  doc1.md  docker-compose.yml  pyproject.toml
python/backend/: Dockerfile  alembic.ini  requirements.txt  seed_demo.py
python/backend/alembic/: env.py
python/backend/alembic/versions/: 20260424_02_baseline.py  20260424_02_partner_monthly_income.py  20260424_creda_upgrade.py  20260425_01_user_profile_rent_bonus.py  20260425_02_user_profile_partner_expenses.py  20260425_03_user_profile_ps6_insurance.py  20260425_04_notification_prefs.py
python/backend/app/: auth.py  config.py  database.py  main.py  models.py  redis_client.py  tax_config.py
python/backend/app/agents/: budget_coach.py  chart_pattern.py  couples_finance.py  et_research.py  expense_analytics.py  family_wealth.py  fire_planner.py  general_chat.py  goal_planner.py  goal_simulator.py  graph.py  human_handoff.py  intent_router.py  life_event_advisor.py  market_pulse.py  money_health.py  money_personality.py  onboarding.py  opportunity_radar.py  portfolio_xray.py  profile_checks.py  rag_agent.py  sip_calculator.py  social_proof.py  state.py  stress_test.py  synthesizer.py  tax_copilot.py  tax_wizard.py
python/backend/app/core/: agent_envelope.py  assumptions.py  extractors.py  holdings_db.py  llm.py  profile_guard.py  rag.py  scheduler.py
python/backend/app/crawlers/: __init__.py  amfi_nav_crawler.py  amfi_ter_crawler.py  market_data_crawler.py  regulatory_crawler.py
python/backend/app/routers/: admin.py  agents.py  assumptions.py  auth.py  budget.py  chat.py  compliance.py  expenses.py  export.py  family.py  nudges.py  portfolio.py  profile.py  voice.py  whatsapp.py  ws.py
python/backend/app/services/: activity.py  amfi_nav.py  compliance.py  expense_crud.py  expense_voice.py  form16_parser.py  intent_classifier.py  intent_embeddings.py  intent_engine.py  nudge_worker.py  profile_completeness.py  rag.py  stt.py  tts.py  voice_command_parser.py  voice_nav_brief.py  voice_nav_intent.py  web_search.py
python/backend/knowledge/: documents.yaml
python/backend/scripts/: install_backend_deps.ps1  install_backend_deps.sh
python/demo/: README.md  demo_config.json  regenerate.py  sample_cams.json  sample_form16.json  test_e2e_demo.py
python/docker/: init-databases.sh
python/frontend/: Dockerfile  compile_messages.py  manage.py  requirements.txt
python/frontend/accounts/: models.py  urls.py  views.py
python/frontend/accounts/migrations/: 0001_initial.py
python/frontend/creda/: asgi.py  context_processors.py  middleware.py  settings.py  urls.py  wsgi.py
python/frontend/dashboard/: urls.py  views.py
python/frontend/dashboard/templatetags/: creda_filters.py
python/frontend/locale/bn/LC_MESSAGES/: django.po
python/frontend/locale/hi/LC_MESSAGES/: django.mo  django.po
python/frontend/locale/kn/LC_MESSAGES/: django.po
python/frontend/locale/mr/LC_MESSAGES/: django.po
python/frontend/static/css/: app.css
python/frontend/templates/: base.html  base_dashboard.html  landing.html
python/frontend/templates/accounts/: forgot_password.html  login.html  register.html  reset_password.html
python/frontend/templates/dashboard/: admin.html  advisor.html  budget.html  chart_intelligence.html  chat.html  compliance.html  couples.html  dashboard.html  expense_analytics.html  export.html  family.html  fire.html  goal_simulator.html  goals.html  health.html  home.html  life_events.html  market_pulse.html  money_personality.html  notifications.html  onboarding.html  opportunity_radar.html  portfolio.html  report_card.html  research.html  settings.html  sip_calculator.html  social_proof.html  stress_test.html  tax.html  tax_copilot.html  voice.html
python/frontend/templates/onboarding/: base.html  step1.html  step2.html  step3.html  wizard.html
python/frontend/templates/partials/: _error_boundary.html  _skeleton_loader.html  profile_incomplete_banner.html  sidebar.html
python/frontend/templates/settings/: assumptions.html  assumptions_panel_inner.html  assumptions_panel_script.html
python/frontend/views/: __init__.py  onboarding.py
(+147 files in other folders)
