[project]
name = "creda-backend"
version = "2.0.0"
description = "CREDA — AI-powered multilingual financial advisory backend for Indian users"
requires-python = ">=3.11,<3.14"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "CREDA Team" }]

dependencies = [
    # ── Framework ──
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "pydantic",
    "python-dotenv",
    "httpx",
    "jinja2",
    "aiofiles",

    # ── Database & persistence ──
    "sqlmodel",
    "aiosqlite",

    # ── LangGraph agent orchestration ──
    "langgraph",
    "langchain-core",
    "langchain-groq",

    # ── LLM ──
    "groq",

    # ── Financial math ──
    "casparser",
    "pyxirr",
    "yfinance",
    "pandas",
    "numpy",
    "scipy",
    "scikit-learn",

    # ── RAG ──
    "chromadb",
    "sentence-transformers",
    "protobuf>=4.25.3",

    # ── PDF ──
    "pdfplumber",
    "pymupdf",

    # ── Utilities ──
    "python-dateutil",
    "requests",
]

[project.optional-dependencies]
multilingual = [
    "torch",
    "torchaudio",
    "transformers",
    "soundfile",
    "parler-tts @ git+https://github.com/huggingface/parler-tts.git",
    "IndicTransToolkit",
    "sentencepiece",
    "sacremoses",
    "gtts",
    "pydub",
    "pipecat-ai",
]

dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[project.scripts]
creda-gateway = "app:main"
creda-finance = "fastapi2_finance:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["agents"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]